feat: single api to parse pdf
